# ERpy

./: Figure1.py  Figure2.py  LICENSE  LICENSE.txt  README.md  Test.py  pyproject.toml
article/: biblio.bib  content.tex  metadata.yaml
erfit/: __init__.py  data_generation.py  entropy.py  ode.py  options.py  poly.py  regression.py
paper_reproduction/: Figure1.py  Figure2.py  Test.py
tests/: test_basic.py
