[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erfit-python"
version = "0.1.0"
description = "Python port of the ERFit MATLAB package for entropic regression"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[tool.setuptools]
packages = ["erfit"]
